calor_x_flutter/build_log_13_utf8.txt
锘縇aunching lib\main.dart on itel P10002L in debug mode...
Running Gradle task 'assembleDebug'...                          
flutter : C:\Users\The 
Godfather\AppData\Local
\Pub\Cache\hosted\pub.d
ev\permission_handler_a
ndroid-10.3.6\android\s
rc\main\java\com\basefl
ow\permissionhandler\Pe
rmissionHandlerPlugin.j
ava:28: error: cannot 
find symbol
At line:1 char:1
+ flutter run -d 
119477146O000888 > 
build_log_13.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\The    
 Go...not find symb    
ol:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
    @Nullable private i
o.flutter.plugin.common
.PluginRegistry.Registr
ar pluginRegistrar;
                       
                       
               ^
  symbol:   class 
Registrar
  location: interface 
PluginRegistry
C:\Users\The Godfather\
AppData\Local\Pub\Cache
\hosted\pub.dev\permiss
ion_handler_android-10.
3.6\android\src\main\ja
va\com\baseflow\permiss
ionhandler\PermissionHa
ndlerPlugin.java:47: 
error: cannot find 
symbol
    public static void 
registerWith(io.flutter
.plugin.common.PluginRe
gistry.Registrar 
registrar) {
                       
                       
                       
      ^
  symbol:   class 
Registrar
  location: interface 
PluginRegistry
2 errors

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':permission_handl
er_android:compileDebug
JavaWithJavac'.
> Compilation failed; 
see the compiler 
output below.
  C:\Users\The Godfathe
r\AppData\Local\Pub\Cac
he\hosted\pub.dev\permi
ssion_handler_android-1
0.3.6\android\src\main\
java\com\baseflow\permi
ssionhandler\Permission
HandlerPlugin.java:28: 
error: cannot find 
symbol
      @Nullable 
private io.flutter.plug
in.common.PluginRegistr
y.Registrar 
pluginRegistrar;
                       
                       
                 ^
    symbol:   class 
Registrar
    location: 
interface 
PluginRegistry
  C:\Users\The Godfathe
r\AppData\Local\Pub\Cac
he\hosted\pub.dev\permi
ssion_handler_android-1
0.3.6\android\src\main\
java\com\baseflow\permi
ssionhandler\Permission
HandlerPlugin.java:47: 
error: cannot find 
symbol
      public static 
void registerWith(io.fl
utter.plugin.common.Plu
ginRegistry.Registrar 
registrar) {
                       
                       
                       
        ^
    symbol:   class 
Registrar
    location: 
interface 
PluginRegistry
  2 errors

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
get full insights.

BUILD FAILED in 57s
Running Gradle task 'assembleDebug'...                             58.2s

螕枚卯螕枚脟 Flutter Fix 螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脡
螕枚茅 [!] Consult the error logs above to identify any broken plugins, specifically those containing  螕枚茅
螕枚茅 "error: cannot find symbol..."                                                                  螕枚茅
螕枚茅 This issue is likely caused by v1 embedding removal and the plugin's continued usage of removed 螕枚茅
螕枚茅 references to the v1 embedding.                                                                 螕枚茅
螕枚茅 To fix this error, please upgrade your current package's dependencies to latest versions by     螕枚茅
螕枚茅 running `flutter pub upgrade`.                                                                  螕枚茅
螕枚茅 If that does not work, please file an issue for the problematic plugin(s) here:                 螕枚茅
螕枚茅 https://github.com/flutter/flutter/issues                                                       螕枚茅
螕枚枚螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚脟螕枚每
Error: Gradle task 
assembleDebug failed 
with exit code 1
